--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,40 +1,46 @@
 {
-	"name": "@mowit/app",
-	"version": "0.1.0",
+	"name": "rentit",
 	"description": "Let the robots mow your garden.",
-	"license": "MIT",
-	"author": "mowit",
-	"private": true,
-	"main": "index.js",
+	"version": "40.0.6",
+	"main": "node_modules/expo/AppEntry.js",
 	"scripts": {
-		"start": "node index.js",
-		"format": "npm run prettier -- --write",
-		"validate": "npm run lint && npm run prettier -- --list-different",
-		"lint": "eslint --ext .js,.jsx,.ts,.tsx ./",
-		"prettier": "prettier \"**/*.+(js|jsx|json|yml|yaml|html|css|less|scss|ts|tsx|md|mdx|graphql|vue|py|java|php)\"",
-		"jest": "jest --passWithNoTests",
-		"test": "jest --watch",
-		"precommit": "lint-staged"
+		"start": "expo start",
+		"android": "expo start --android",
+		"ios": "expo start --ios",
+		"web": "expo start --web",
+		"eject": "expo eject",
+		"test": "jest --watchAll"
+	},
+	"jest": {
+		"preset": "jest-expo"
 	},
 	"dependencies": {
-		"react": "^17.0.1"
+		"@expo/vector-icons": "^12.0.0",
+		"@react-native-community/masked-view": "0.1.10",
+		"@react-navigation/bottom-tabs": "^5.11.1",
+		"@react-navigation/native": "^5.8.9",
+		"@react-navigation/stack": "^5.12.6",
+		"expo": "~40.0.0",
+		"expo-asset": "~8.2.1",
+		"expo-constants": "~9.3.0",
+		"expo-font": "~8.4.0",
+		"expo-linking": "~2.0.0",
+		"expo-splash-screen": "~0.8.0",
+		"expo-status-bar": "~1.0.3",
+		"expo-web-browser": "~8.6.0",
+		"react": "16.13.1",
+		"react-dom": "16.13.1",
+		"react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+		"react-native-gesture-handler": "~1.8.0",
+		"react-native-safe-area-context": "3.1.9",
+		"react-native-screens": "~2.15.0",
+		"react-native-web": "~0.13.12"
 	},
 	"devDependencies": {
-		"@types/jest": "^26.0.18",
-		"@types/node": "^14.14.11",
-		"@types/react": "^17.0.0",
-		"@typescript-eslint/eslint-plugin": "^4.9.1",
-		"@typescript-eslint/parser": "^4.9.1",
-		"eslint": "^7.15.0",
-		"eslint-config-prettier": "^7.0.0",
-		"eslint-plugin-jest": "^24.1.3",
-		"eslint-plugin-react": "^7.21.5",
-		"eslint-plugin-react-hooks": "^4.2.0",
-		"jest": "^26.6.3",
-		"jest-config": "^26.6.3",
-		"lint-staged": "^10.5.3",
-		"prettier": "^2.2.1",
-		"ts-jest": "^26.4.4",
-		"typescript": "^4.1.2"
+		"@babel/core": "~7.9.0",
+		"@types/react": "~16.9.35",
+		"@types/react-native": "~0.63.2",
+		"jest-expo": "~40.0.0",
+		"typescript": "~4.0.0"
 	}
 }
