chore(all): rename codebase & installed apollo client

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@mowit/monorepo",
+	"name": "@rentit/monorepo",
 	"version": "0.1.0",
 	"description": "Let the robots mow your garden.",
 	"license": "MIT",
