--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,8 +1,9 @@
 {
-	"name": "rentit",
+	"name": "@rentit/app",
 	"description": "Let the robots mow your garden.",
 	"version": "40.0.6",
 	"main": "node_modules/expo/AppEntry.js",
+	"private": true,
 	"scripts": {
 		"start": "expo start",
 		"android": "expo start --android",
@@ -15,6 +16,7 @@
 		"preset": "jest-expo"
 	},
 	"dependencies": {
+		"@apollo/client": "^3.3.6",
 		"@expo/vector-icons": "^12.0.0",
 		"@react-native-community/masked-view": "0.1.10",
 		"@react-navigation/bottom-tabs": "^5.11.1",
@@ -28,6 +30,7 @@
 		"expo-splash-screen": "~0.8.0",
 		"expo-status-bar": "~1.0.3",
 		"expo-web-browser": "~8.6.0",
+		"graphql": "^15.4.0",
 		"react": "16.13.1",
 		"react-dom": "16.13.1",
 		"react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
