chore: change tabs to corresponding views
Co-Authored-By: Daniel Lutz <21310970+danlutz@users.noreply.github.com>

--- a/packages/app/app.json
+++ b/packages/app/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "app",
-    "slug": "app",
+    "name": "rentint",
+    "slug": "rentint",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -19,13 +19,15 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.rentit.app"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.rentit.app"
     },
     "web": {
       "favicon": "./assets/images/favicon.png"
