--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -20,6 +20,7 @@
 		"@apollo/client": "^3.3.6",
 		"@expo/vector-icons": "^12.0.0",
 		"@react-native-community/masked-view": "0.1.10",
+		"@react-native-firebase/app": "^10.3.0",
 		"@react-navigation/bottom-tabs": "^5.11.1",
 		"@react-navigation/native": "^5.8.9",
 		"@react-navigation/stack": "^5.12.6",
