--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -19,7 +19,7 @@
 	"dependencies": {
 		"@apollo/client": "^3.3.6",
 		"@expo/vector-icons": "^12.0.0",
-		"@react-native-community/masked-view": "0.1.10",
+		"@react-native-community/masked-view": "^0.1.10",
 		"@react-native-firebase/app": "^10.3.0",
 		"@react-navigation/bottom-tabs": "^5.11.1",
 		"@react-navigation/native": "^5.8.9",
@@ -37,9 +37,10 @@
 		"react": "16.13.1",
 		"react-dom": "16.13.1",
 		"react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-		"react-native-gesture-handler": "~1.8.0",
-		"react-native-safe-area-context": "3.1.9",
-		"react-native-screens": "~2.15.0",
+		"react-native-gesture-handler": "^1.9.0",
+		"react-native-reanimated": "^1.13.2",
+		"react-native-safe-area-context": "^3.1.9",
+		"react-native-screens": "^2.16.1",
 		"react-native-web": "~0.13.12"
 	},
 	"devDependencies": {
