--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -19,6 +19,7 @@
 	"dependencies": {
 		"@apollo/client": "^3.3.6",
 		"@expo/vector-icons": "^12.0.0",
+		"@react-native-community/datetimepicker": "3.0.4",
 		"@react-native-community/masked-view": "0.1.10",
 		"@react-native-firebase/app": "^10.3.0",
 		"@react-navigation/bottom-tabs": "^5.11.1",
@@ -41,7 +42,8 @@
 		"react-native-reanimated": "~1.13.0",
 		"react-native-safe-area-context": "3.1.9",
 		"react-native-screens": "~2.15.0",
-		"react-native-web": "~0.13.12"
+		"react-native-web": "~0.13.12",
+		"yup": "^0.32.8"
 	},
 	"devDependencies": {
 		"@babel/core": "~7.9.0",
