--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -22,6 +22,7 @@
 		"@react-native-community/datetimepicker": "3.0.4",
 		"@react-native-community/masked-view": "0.1.10",
 		"@react-native-firebase/app": "^10.3.0",
+		"@react-native-picker/picker": "^1.9.8",
 		"@react-navigation/bottom-tabs": "^5.11.1",
 		"@react-navigation/native": "^5.8.9",
 		"@react-navigation/stack": "^5.12.6",
