--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -26,6 +26,7 @@
 		"@react-navigation/bottom-tabs": "^5.11.1",
 		"@react-navigation/native": "^5.8.9",
 		"@react-navigation/stack": "^5.12.6",
+		"eva-icons": "^1.1.3",
 		"expo": "~40.0.0",
 		"expo-asset": "~8.2.1",
 		"expo-camera": "~9.1.0",
