--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -32,6 +32,7 @@
 		"expo-camera": "~9.1.0",
 		"expo-constants": "~9.3.0",
 		"expo-font": "~8.4.0",
+		"expo-image-picker": "~9.2.0",
 		"expo-linking": "~2.0.0",
 		"expo-splash-screen": "~0.8.0",
 		"expo-status-bar": "~1.0.3",
@@ -40,6 +41,7 @@
 		"react": "16.13.1",
 		"react-dom": "16.13.1",
 		"react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+		"react-native-appearance": "~0.3.3",
 		"react-native-confirmation-code-field": "^6.5.1",
 		"react-native-gesture-handler": "~1.8.0",
 		"react-native-reanimated": "~1.13.0",
