--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -31,12 +31,15 @@
 		"expo-asset": "~8.2.1",
 		"expo-camera": "~9.1.0",
 		"expo-constants": "~9.3.0",
+		"expo-facebook": "~9.1.0",
 		"expo-font": "~8.4.0",
+		"expo-google-sign-in": "~8.4.0",
 		"expo-image-picker": "~9.2.0",
 		"expo-linking": "~2.0.0",
 		"expo-splash-screen": "~0.8.0",
 		"expo-status-bar": "~1.0.3",
 		"expo-web-browser": "~8.6.0",
+		"firebase": "7.9.0",
 		"graphql": "^15.4.0",
 		"react": "16.13.1",
 		"react-dom": "16.13.1",
