--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -36,6 +36,7 @@
 		"expo-google-sign-in": "~8.4.0",
 		"expo-image-picker": "~9.2.0",
 		"expo-linking": "~2.0.0",
+		"expo-random": "~10.0.0",
 		"expo-splash-screen": "~0.8.0",
 		"expo-status-bar": "~1.0.3",
 		"expo-web-browser": "~8.6.0",
